# rustcolor

./: Cargo.toml  LICENSE  README.MD  README.md
src/: color.rs  color16.rs  color256.rs  lib.rs  macros.rs  printer.rs  style.rs
