[package]
name = "rustcolor"
version = "0.4.0"
authors = ["Júlio César de Brito Gardona <jcbritobr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "styles"

[[bin]]
name = "print4bitcolor"

[[bin]]
name = "print8bitcolor"

[[bin]]
name = "print24bitcolor"

[[bin]]
name = "customstyle"

[dependencies]
