[package]
name = "rustcolor"
version = "0.4.0"
authors = ["jcbritobr <jcbritobr@gmail.com>"]
edition = "2018"
repository = "https://github.com/jcbritobr/rustcolor"
homepage = "https://github.com/jcbritobr/rustcolor"
description = "Rust terminal rendering library thats supports 3/4 bit, 8 bit and 24 bit colors."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "styles"

[[bin]]
name = "print4bitcolor"

[[bin]]
name = "print8bitcolor"

[[bin]]
name = "print24bitcolor"

[[bin]]
name = "customstyle"

[dependencies]
